[package]
name = "xx-economics"
version = "0.1.0"
authors = ["Bernardo Cardoso <bernardo@xx.network>"]
edition = "2021"

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.126", optional = true }

# primitives
sp-std = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false }
sp-io = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false }
sp-tracing = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false }
sp-runtime = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false }
sp-arithmetic = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false }

# frame dependencies
frame-support = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false }
frame-system = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false }

pallet-staking = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false }

pallet-staking-reward-fn = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false }
pallet-proxy = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false }

xx-public = { version = "0.1.0", path = "../xx-public", default-features = false}

frame-benchmarking = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false, optional = true }

[dev-dependencies]
pallet-balances = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-staking = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
	"sp-arithmetic/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-staking/std",
	"pallet-staking-reward-fn/std",
	"pallet-proxy/std",
	"xx-public/std",
]
runtime-benchmarks = ["frame-benchmarking", "frame-system/runtime-benchmarks"]
