[package]
name = "xx-team-custody"
version = "0.1.0"
authors = ["Bernardo Cardoso <bernardo@xx.network>"]
edition = "2018"

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.126", optional = true }

# primitives
sp-std = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", default-features = false }
sp-runtime = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", default-features = false }
sp-arithmetic = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", default-features = false }

# frame dependencies
frame-support = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", default-features = false }
frame-system = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", default-features = false }

pallet-staking = { version = "3.0.0", path = "../staking", default-features = false }
pallet-staking-reward-fn = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", default-features = false }
pallet-proxy = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", default-features = false }

frame-benchmarking = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet", default-features = false, optional = true }

[dev-dependencies]
sp-core = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet" }
sp-io = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet" }
sp-staking = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet" }
sp-tracing = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet" }

frame-election-provider-support = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet" }
pallet-staking-reward-curve = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet" }

pallet-authorship = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet" }
pallet-timestamp = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet" }
pallet-balances = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet" }
pallet-session = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet" }
pallet-democracy = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet" }
pallet-elections-phragmen = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet" }
pallet-scheduler = { git = "https://github.com/xx-labs/substrate", branch = "xx-protonet" }


[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
	"sp-arithmetic/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-staking/std",
	"pallet-staking-reward-fn/std",
	"pallet-proxy/std"
]
runtime-benchmarks = ["frame-benchmarking"]
