[package]
name = "xx-team-custody"
version = "0.1.0"
authors = ["Bernardo Cardoso <bernardo@xx.network>"]
edition = "2021"

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.126", optional = true }

# primitives
sp-std = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false }
sp-runtime = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false }
sp-arithmetic = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false }

# frame dependencies
frame-support = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false }
frame-system = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false }

pallet-staking = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false }
pallet-staking-reward-fn = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false }
pallet-proxy = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false }

frame-benchmarking = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network", default-features = false, optional = true }

[dev-dependencies]
sp-core = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-io = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-staking = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
sp-tracing = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }

frame-election-provider-support = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
pallet-staking-reward-curve = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }

pallet-authorship = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
pallet-timestamp = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
pallet-balances = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
pallet-session = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
pallet-democracy = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
pallet-elections-phragmen = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
pallet-scheduler = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }
pallet-preimage = { git = "https://github.com/xx-labs/substrate", branch = "dev/xx-network" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
	"sp-arithmetic/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-staking/std",
	"pallet-staking-reward-fn/std",
	"pallet-proxy/std",
	"frame-benchmarking?/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = [ "frame-support/try-runtime" ]
