[package]
name = "runtime-common"
version = "0.2.0"
authors = ["xxlabs <admin@xx.network>"]
edition = "2021"
homepage = "https://xx.network"
repository = "https://github.com/xx-labs/xxchain/"

[dependencies]

# third-party dependencies
static_assertions = "1.1.0"
smallvec = "1.7.0"

# primitives
sp-std = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
sp-runtime = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
node-primitives = { version = "0.2.0", default-features = false, path = "../../primitives" }

# frame dependencies
frame-support = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
frame-system = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }

# pallets
pallet-authorship = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
pallet-balances = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
pallet-transaction-payment = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
pallet-treasury = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }

[features]
default = ["std"]
std = [
	"sp-std/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"node-primitives/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
]
