[package]
name = "runtime-common"
version = "0.2.0"
authors = ["xxlabs <admin@xx.network>"]
edition = "2021"
homepage = "https://xx.network"
repository = "https://github.com/xx-labs/xxchain/"

[dependencies]

# third-party dependencies
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
static_assertions = "1.1.0"
smallvec = "1.7.0"

# primitives
sp-std = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
sp-runtime = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
node-primitives = { version = "0.2.0", default-features = false, path = "../../primitives" }
sp-staking = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
sp-io = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }

# frame dependencies
frame-support = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
frame-system = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
frame-election-provider-support = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }

# pallets
pallet-authorship = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
pallet-balances = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
pallet-transaction-payment = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
pallet-treasury = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
pallet-staking = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }
pallet-election-provider-multi-phase = { git = "https://github.com/xx-labs/substrate", branch = "xx-network", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-std/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"node-primitives/std",
	"sp-staking/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"frame-election-provider-support/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-staking/std",
	"pallet-election-provider-multi-phase/std",
]
fast-runtime = []
