[package]
name = "xxnetwork-generate-bags"
version = "0.2.6"
authors = ["Bernardo Cardoso <bernardo@xx.network>"]
edition = "2021"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }

generate-bags = { git = "https://github.com/xx-labs/substrate", branch = "xx-network" }

xxnetwork-runtime = { version = "0.2.6", path = "../../runtime/xxnetwork" }
