[package]
name = "xxnetwork-generate-bags"
version = "0.2.6"
authors = ["Bernardo Cardoso <bernardo@xx.network>"]
edition = "2021"

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }

generate-bags = { git = "https://github.com/xx-labs/substrate", branch = "xx-network-v0.2.6" }

xxnetwork-runtime = { version = "0.2.6", path = "../../runtime/xxnetwork" }
